@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.SageTV"
+<addon id="plugin.video.sagetv"
        name="SageTV"
-       version="1.1.0"
-       provider-name="aaronb,kricker,LehighBri">
+       version="1.2.0"
+       provider-name="aaronb,kricker,lehighbri">
   <requires>
-    <import addon="xbmc.python" version="1.0"/>
+    <import addon="xbmc.python" version="2.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
