@@ -1,10 +1,14 @@
-[B]Version 1.1.1 (Sep 20, 2012)[/B]
+[B]Version 1.2.0 (Sep 20, 2012)[/B]
+- Updated dependency to use python 2.0 instead of 1.0
+- Changed name of addon to all lowercase to be consistent with addon naming requirements
+
+[B]Version 1.1.1 (Sep 19, 2012)[/B]
 - Added support to watch an airing live
 - Added initial notifications to give feedback after various context menu items are executed (e.g. delete, start recording)
 - Updated display text for shows without descriptions or episode titles (e.g. some news and sports shows)
 - Updated search to not search within an episode's description field (just search within episode title and show title)
 
-[B]Version 1.1.0 (Sep 19, 2012)[/B]
+[B]Version 1.1.0 (Sep 18, 2012)[/B]
 - Support up to 5 recording directory mappings
 - Updated how airings/recordings of various genres are displayed (e.g. Movies vs. TV Shows)
 - Updated thumbnail and poster images
